// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserReducer should handle specific http status types: http status 4XX 400 1`] = `
{
  "result": {
    "errors": {},
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 401 1`] = `
{
  "result": {
    "errors": {
      "data": [
        "SUBSCRIPTIONS1004",
      ],
      "error": true,
      "errorMessage": "Request failed with status code 401",
      "status": 401,
    },
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 403 1`] = `
{
  "result": {
    "errors": {
      "data": [
        "SUBSCRIPTIONS1004",
      ],
      "error": true,
      "errorMessage": "Request failed with status code 403",
      "status": 403,
    },
  },
  "type": "4XX",
}
`;
